--- a/style.css
+++ b/style.css
@@ -46,13 +46,16 @@ footer{
     text-align: center;
 }
 h1{
-    font-family: 'Cairo', sans-serif;font-size: 50px;text-align: center;line-height:80%;letter-spacing: 5px;padding: 20px;
+    font-family: 'Cairo', sans-serif;font-size: 30px;text-align: center;line-height:80%;letter-spacing: 3px;padding: 10px;color: white;
+}
+.fondoTitulos{
+    background-color: chocolate;
 }
 h2{
     color: chocolate;font-family:sans-serif;font-size: 30px;letter-spacing:2px;padding: 20px;margin: 20px;text-align: center;
 }
 p{
-    color: chocolate;font-family: 'Fredoka One', cursive;;font-size: 20px;text-align:justify center;line-height: 20px;letter-spacing: 2px;margin: 10px; word-spacing:2px;}
+    color: chocolate;font-family: 'Fredoka One', cursive;font-size: 20px;text-align:justify center;line-height: 20px;letter-spacing: 2px;margin: 10px; word-spacing:2px;}
 form{
     display: grid;
     grid-template-columns: 500px;
@@ -80,7 +83,7 @@ table,th,td{
     height: 450px; width: 500px;border-radius: 30px;
 }
 hr {
-    margin: 30px;
+    margin: 60px;
 }
 /* ICONOS REDES SOCIALES */
 .redesFlex{
@@ -126,8 +129,8 @@ hr {
 .card{
     margin: 20px;
     background-color:transparent;
-    border-radius: 20%;
-    border: none;
+    border:none;
+    padding:0.5px;
 }
 .row{
     justify-content: center;
@@ -157,7 +160,13 @@ hr {
         font-family: 'Cairo', sans-serif;font-size:20px;text-align: center;line-height:80%;letter-spacing: 2px;padding:15px;
     }
     p{
-        color: chocolate;font-family: 'Cairo', sans-serif;font-size: 10px;text-align: center;line-height: 1px;letter-spacing: 1px;margin: 0px; word-spacing:1px
+        color: chocolate;font-family: 'Fredoka One', cursive;font-size: 20px;text-align:justify center;line-height: 20px;letter-spacing: 2px;margin: 10px; word-spacing:2px;
+    }
+    .copyR{
+        color: white;
+        font-family:'Franklin Gothic Medium';
+        font-size: 12px;
+        text-align: center;
     }
 }
 @media (min-width: 351px) and (max-width:516px)
@@ -169,27 +178,44 @@ hr {
     } 
     .grid{
         display: grid;
-        grid-template-columns: 200px;
-        grid-template-rows: 200px;
+        grid-template-columns: 300px;
+        grid-template-rows: 400px;
         justify-content: center;
         align-items: center;
         grid-row-gap:15px ;
         grid-column-gap:15px ;
         }
     .imgPro{
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
         border-radius: 30%;
     }
     h1{
         font-family: 'Cairo', sans-serif;font-size:30px;text-align: center;line-height:80%;letter-spacing: 2px;padding:15px;
     }
     p{
-        color:chocolate;font-family: 'Cairo', sans-serif;font-size: 7px;
+        color: chocolate;font-family: 'Fredoka One', cursive;;font-size: 13px;
     }
     a{
         color: chocolate;font-family: 'Satisfy', cursive;font-size: 15px;
         text-decoration: none;
+    }
+    .medidasImg{
+        height: 40vh;
+    }
+    .logo{
+        position: absolute;
+        left: 3%;
+        height: 60px;
+    }
+    .logosRedesSociales{
+        height: 40px;
+    }
+    .copyR{
+        color: white;
+        font-family:'Franklin Gothic Medium';
+        font-size: 14px;
+        text-align: center;
     }
 }
 @media (min-width: 517px) and (max-width:980px)
@@ -217,10 +243,27 @@ hr {
         font-family: 'Cairo', sans-serif;font-size:30px;text-align: center;line-height:80%;letter-spacing: 2px;padding:15px;
     }
     p{
-        color: chocolate;font-family: 'Cairo', sans-serif;font-size: 12px;text-align: center;line-height: 12px;letter-spacing: 1px;margin: 0px; word-spacing:1px
+        color: chocolate;font-family: 'Fredoka One', cursive;;font-size: 13px;
     }
     a{
-        color: chocolate;font-family: 'Satisfy', cursive;font-size: 20px;
+        color: chocolate;font-family: 'Satisfy', cursive;font-size: 18px;
         text-decoration: none;
+    }
+    .medidasImg{
+        height: 40vh;
+    }
+    .logo{
+        position: absolute;
+        left: 5%;
+        height: 60px;
+    }
+    .logosRedesSociales{
+        height: 45px;
+    }
+    .copyR{
+        color: white;
+        font-family:'Franklin Gothic Medium';
+        font-size: 14px;
+        text-align: center;
     }
 }
