--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body {  
 color:rgb(119, 83, 28);font-family:Helvetica; background-image: url(img/rollFondo.jpeg);
-background-repeat: repeat;background-size: 200px;
+background-repeat: repeat;background-size:200px;background-position:center;
 } 
 /* NAVEGADOR */
 .nav {
@@ -121,6 +121,10 @@ hr {
     height: 500px;
     border-radius: 30%;
 }
+.nombreProductos{
+    font-size: 30px;
+    line-height:30px;
+}
 /* BOOTSTRAP */
 .card-img-top{
     border-radius: 20%;
@@ -134,6 +138,7 @@ hr {
 }
 .row{
     justify-content: center;
+    margin-right: 0%;
 }
 @media (min-width: 0px) and (max-width:350px) 
 {
@@ -168,6 +173,10 @@ hr {
         font-size: 12px;
         text-align: center;
     }
+    .nombreProductos{
+        font-size: 20px;
+        line-height:30px;
+    }
 }
 @media (min-width: 351px) and (max-width:516px)
 {
@@ -191,7 +200,10 @@ hr {
         border-radius: 30%;
     }
     h1{
-        font-family: 'Cairo', sans-serif;font-size:30px;text-align: center;line-height:80%;letter-spacing: 2px;padding:15px;
+        font-family: 'Cairo', sans-serif;font-size:20px;text-align: center;line-height:80%;letter-spacing: 2px;padding:15px;
+    }
+    h2{
+        font-size: 20px;
     }
     p{
         color: chocolate;font-family: 'Fredoka One', cursive;;font-size: 13px;
@@ -205,8 +217,8 @@ hr {
     }
     .logo{
         position: absolute;
-        left: 3%;
-        height: 60px;
+        left: 0%;
+        height: 50px;
     }
     .logosRedesSociales{
         height: 40px;
@@ -216,6 +228,10 @@ hr {
         font-family:'Franklin Gothic Medium';
         font-size: 14px;
         text-align: center;
+    }
+    .nombreProductos{
+        font-size: 25px;
+        line-height:30px;
     }
 }
 @media (min-width: 517px) and (max-width:980px)
